[tool.poetry]
name = "web-11"
version = "0.1.0"
description = ""
authors = ["OlgaSirenko <132263673+CamillaSirenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
sqlalchemy = "^1.4.0"
databases = "^0.5.2"
psycopg2-binary = "^2.9.1"
unicorn = "^2.0.1.post1"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
